kubernetes/base/api-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
  namespace: default
spec:
  controllerName: "k8s.io/nginx-gateway-controller"
