kubernetes/base/api-gateway/product-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-route
  namespace: default
spec:
  parentRefs:
    - name: api-gateway  # Reference to the Gateway
  hostnames:
  - "product.api"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: product-svc  # Service name
          port: 80  # Service port
